/*
    MIT License

    Copyright (c) Microsoft Corporation.

    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to deal
    in the Software without restriction, including without limitation the rights
    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all
    copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
    SOFTWARE
*/

syntax = "proto3";

option go_package = "github.com/Azure/kube-egress-gateway/pkg/cniprotocol";
package pkg.cniprotocol.v1;
import "google/rpc/status.proto";

message PodConfig{
  string public_key = 1;
  string pod_ip = 2;
}

// CNIAddRequest is the request for cni add function.
message NicAddRequest {
  string gateway_name = 1;
  PodConfig pod_config =2;
}

message GatewayConfig {
  string endpoint_ip = 1;
  string public_key = 2;
}

// CNIAddResponse is the response for cni add function.
message NicAddResponse {
  google.rpc.Status status = 1;
  optional GatewayConfig gateway_config = 2;
}

// CNIDeleteRequest is the request for cni del function.
message NicDelRequest {
  string pod_ip = 1;
}

// CNIDeleteResponse is the response for cni del function.
message NicDelResponse {
  google.rpc.Status status = 1;
}

// NicService is the nic management service.
service NicService {
  // NicAdd: send pod public key and return gateway public key and endpoint ip
  rpc NicAdd(NicAddRequest) returns (NicAddResponse) ;

  // NicDel: delete pod endpoint resource
  rpc NicDel(NicDelRequest) returns (NicDelResponse) ;
}

